[metadata]
name = docker-registry-purger
version = 0.1.2.dev0
author = Polyconseil
author_email = opensource+docker-registry-purger@polyconseil.fr
url = http://github.com/polyconseil/docker-registry-purger
description = A simple docker registry cleaner
long_description = file: README.rst
license = BSD 3-Clause License
keywords = docker, docker-registry, cleaner
classifiers =
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3 :: Only
        Topic :: System :: Software Distribution
        Topic :: System :: Systems Administration
        Topic :: Utilities

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = src

python_requires = > 3.7
setup_requires =
    setuptools
install_requires =
    click
    daiquiri
    isodate
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    docker-registry-purger = docker_registry_purger.__init__:main

[flake8]
max-line-length = 120
exclude = build,dist,venv
max-complexity = 10

[zest.releaser]
create-wheel = yes

